# apex-mage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CNAME  Dockerfile  LICENSE  PROJECT.md  README.md  agents.md  ai.py  allowed_vendors.json  api_main.py  carousel.py  claude.md  install.sh  main.py  mem.py  pyproject.toml  requirements.txt  start.sh  update_keys.sh
.beads/: issues.jsonl
.claude/agents/: coding.md  initializer.md  reviewer.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  container-build.yml  deploy.yml
db/: add_channel.sql  add_message.sql  add_message_with_images.sql  add_vendor.sql  create_schema_channel_messages.sql  create_schema_channels.sql  create_schema_vendors.sql  deactivate_old_messages.sql  delete_channel_messages.sql  get_channel.sql  get_channel_latest_image_indicator.sql  get_count_recent_image_requests.sql  get_count_recent_text_requests.sql  get_latest_images.sql  get_latest_messages.sql  get_vendor.sql  get_visible_messages.sql
db/migrations/: add_is_image_only_context.sql
docs/: conventions.md  data-model.md  deployment.md
src/: __init__.py
src/adapters/: __init__.py  factory.py  gcs_adapter.py  memory_repository.py  repository_compat.py  sqlite_repository.py
src/api/: __init__.py  app.py  auth.py  dependencies.py  schemas.py  websocket.py
src/core/: __init__.py  auto_summarization.py  carousel_logic.py  chart_utils.py  content_screening.py  conversation.py  errors.py  haiku.py  health.py  image_utils.py  image_variations.py  logging.py  providers.py  rate_limit.py  token_counting.py
src/ports/: __init__.py  repositories.py
src/providers/: __init__.py  anthropic_provider.py  fal_provider.py  serpapi_provider.py
temp/: CODEBASE_REVIEW.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_variation_carousel.py
tests/mocks/: __init__.py  (+1 more)
(+63 files in other folders)
